Fortran: fix handling of preprocessor directives on the first line
Fix a race initialization leading to incorrect handling of preprocessor
directives on the first input line.

Test case contributed by Adam Hirst, thanks.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -194,6 +194,7 @@ test_sources = \
 	objectivec_protocol.mm			\
 	Package.pm						\
 	php5_5_class_kw.php				\
+	preprocessor.f90				\
 	procedure_pointer_module.f90	\
 	procpoint.f90					\
 	property.cs						\
