Add coffescript syntax highlighting
imported lexer from Scintilla and added coffeescript filetype

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -15,6 +15,7 @@ filetypes = \
 	filetypes.Clojure.conf \
 	filetypes.cmake \
 	filetypes.cobol \
+	filetypes.coffeescript \
 	filetypes.common \
 	filetypes.conf \
 	filetypes.cpp \
