--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,9 @@ Makefile.in
 /stamp-h.in
 /*.tar.*
 /TODO.*
+# extracted Waf directory (without dot on Windows)
 /.waf-*
+/waf-*
 
 #-----------------------------------------------------------------------
 # /po/
