--- a/Makefile.am
+++ b/Makefile.am
@@ -25,13 +25,9 @@ SYS_DATA_FILES = \
 	$(srcdir)/data/templates/* \
 	$(srcdir)/data/templates/files/* \
 	$(srcdir)/data/colorschemes/* \
-	$(top_srcdir)/data/geany.glade
-
-if GTK3
-	$(top_srcdir)/data/geany.css
-else
-	$(top_srcdir)/data/geany.gtkrc
-endif
+	$(top_srcdir)/data/geany.glade \
+	data/geany.css \
+	data/geany.gtkrc
 
 EXTRA_DIST = \
 	autogen.sh \
