fix scintilla makefile.win32 path

--- a/makefile.win32
+++ b/makefile.win32
@@ -33,7 +33,7 @@ all: config.h
 	$(MAKE) -C tagmanager/ctags -f makefile.win32
 	$(MAKE) -C tagmanager/mio -f makefile.win32
 	$(MAKE) -C tagmanager/src -f makefile.win32
-	$(MAKE) -C scintilla -f makefile.win32
+	$(MAKE) -C scintilla/gtk -f makefile.win32
 	$(MAKE) -C plugins -f makefile.win32
 	$(MAKE) -C src -f makefile.win32
 
@@ -48,7 +48,7 @@ clean:
 	$(MAKE) -C tagmanager/ctags -f makefile.win32 clean
 	$(MAKE) -C tagmanager/mio -f makefile.win32 clean
 	$(MAKE) -C tagmanager/src -f makefile.win32 clean
-	$(MAKE) -C scintilla -f makefile.win32 clean
+	$(MAKE) -C scintilla/gtk -f makefile.win32 clean
 	$(MAKE) -C plugins -f makefile.win32 clean
 	$(MAKE) -C src -f makefile.win32 clean
 
