Add clean section and fix another typo...
Add clean section and fix another typo...

--- a/scintilla/gtk/makefile.win32
+++ b/scintilla/gtk/makefile.win32
@@ -55,7 +55,7 @@ endif
 MARSHALLER=scintilla-marshal.o
 
 .cxx.o:
-	$(CXX) $(CXXTFLAGS) -c $<
+	$(CXX) $(CXXFLAGS) -c $<
 .c.o:
 	$(CC) $(CXXFLAGS) -c $<
 
