Improve Docutils (and friends) support in Autotools
* Add `--enable-html-docs` and `--enable-pdf-docs` arguments
  (off by default)
* Add `RST2HTML`, `RST2LATEX` and `PDFLATEX` to override path to these
  tools.
* Add HTML and PDF doc status messages to configure summary

--- a/configure.ac
+++ b/configure.ac
@@ -113,6 +113,8 @@ GEANY_I18N
 GEANY_DATA_DIR=`eval echo ${datarootdir}/geany`
 AC_SUBST([GEANY_DATA_DIR])
 
+# Documentation tools
+GEANY_CHECK_DOCUTILS
 GEANY_CHECK_DOXYGEN
 
 # Output
