Use improved Docutils Autotools support
FIXME: The `install-html-local` rule might be wrong since it's
copying `$(srcdir)/geany.html` instead of `$(builddir)/geany.html`
because for some reason generated `geany.html` is checked-in to
version control in the source `doc` directory.

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,11 @@ Makefile.in
 /doc/geany.1
 /doc/hacking.html
 /doc/*.pdf
+/doc/*.aux
+/doc/*.log
+/doc/*.out
+/doc/*.tex
+/doc/*.toc
 /doc/reference
 
 #-----------------------------------------------------------------------
