--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -47,7 +47,7 @@ NSIS=*.nsi;*.nsh;
 Objective-C=*.m;*.mm;*.h;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
-PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
+PHP=*.php;*.php3;*.php4;*.php5;*.phtml;*.ctp;
 Po=*.po;*.pot;
 Python=*.py;*.pyw;SConstruct;SConscript;wscript;
 PowerShell=*.ps1;*.psm1;
