--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -56,6 +56,7 @@ R=*.R;*.r;
 Rust=*.rs;
 Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
+SCSS=*.scss;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.ash;*.bash;*.m4;PKGBUILD;*profile;
 SQL=*.sql;
 Tcl=*.tcl;*.tk;*.wish;
@@ -71,6 +72,6 @@ None=*;
 [Groups]
 Programming=Clojure;CUDA;Cython;Genie;Go;Rust;Scala;
 Script=Graphviz;
-Markup=
+Markup=SCSS;
 Misc=
 None=
