updated alt and default colorscheme for lightweight markup changed some marks name according to the usual convention

--- a/data/colorschemes/alt.conf
+++ b/data/colorschemes/alt.conf
@@ -87,6 +87,31 @@ attribute_unknown=attribute,bold
 value=string_1
 entity=default
 
+# Light-weight markup languages
+#-------------------------------------------------------------------------------
+
+markup_strong=#3465a4;;true
+markup_emphasis=#c17d11;;;true
+markup_underlined=#4e9a06
+markup_strikeout=#75507b
+markup_header_1=#a40000;;true
+markup_header_2=#cc0000;;true
+markup_header_3=#ef2929;;true
+markup_header_4=#ef2929;;true
+markup_header_5=#ef2929;;true
+markup_header_6=#ef2929;;true
+markup_ulist_item=#ef2929
+markup_olist_item=#ef2929
+markup_hrule=#ff901e
+markup_link=#204a87;;;true
+markup_blockquote=#4e9a06
+markup_code=#4e9a06
+markup_code_block=#4e9a06
+markup_comment=#888a85;;;true
+markup_option=#75507b;;;true
+markup_preproc=#c4a000;;;true
+markup_postproc=#ce5c00;;;true
+
 # Diff
 #-------------------------------------------------------------------------------
 
