SCSS: Add build commands

--- a/data/filetypes.SCSS.conf
+++ b/data/filetypes.SCSS.conf
@@ -8,3 +8,10 @@ lexer.css.scss.language=1
 lexer_filetype=CSS
 tag_parser=CSS
 extension=scss
+
+[build_settings]
+# %f will be replaced by the complete filename
+# %e will be replaced by the filename without extension
+# (use only one of it at one time)
+compiler=sass -c "%f"
+linker=sass --style expanded "%f" "%e.dev.css"
