--- a/data/filetypes.SCSS.conf
+++ b/data/filetypes.SCSS.conf
@@ -9,6 +9,9 @@ lexer_filetype=CSS
 tag_parser=CSS
 extension=scss
 
+# SCSS has single-line comments in addition to CSS multi-line ones
+comment_single=//
+
 [build_settings]
 # %f will be replaced by the complete filename
 # %e will be replaced by the filename without extension
