Udated jscript to be able to parse SAPUI5 controller and view files.
Added test case tests/ctags/ui5.controller.js

git-svn-id: https://svn.code.sf.net/p/ctags/code/trunk@808 c5d04d22-be80-434c-894e-aa346cc9e8e8

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -258,6 +258,7 @@ test_sources = \
 	test_input2.rs					\
 	traffic_signal.v				\
 	traits.php						\
+	ui5.controller.js				\
 	union.f							\
 	value.f							\
 	whitespaces.php					\
