Add Zephir filetype

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -65,6 +65,7 @@ Verilog=*.v;
 VHDL=*.vhd;*.vhdl;
 XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;
 YAML=*.yaml;*.yml;
+Zephir=*.zep;
 None=*;
 
 # Note: restarting is required after editing groups
