--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,9 +46,9 @@ SRCS = \
 	toolbar.c toolbar.h \
 	tools.c tools.h \
 	sidebar.c sidebar.h \
-	spawn.c spawn.h \
 	ui_utils.c ui_utils.h \
-	utils.c utils.h
+	utils.c utils.h \
+	spawn.c spawn.h
 
 
 geany_includedir = $(includedir)/geany
