Add new GeanyPage class.
The purpose of this class is to encapsulate notebook tabs and their contents.
This includes management of the tab label and icon.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -77,6 +77,7 @@ libgeany_la_SOURCES = \
 	geanymenubuttonaction.c geanymenubuttonaction.h \
 	geanyobject.c geanyobject.h \
 	geanywraplabel.c geanywraplabel.h \
+	geanypage.c geanypage.h \
 	gtkcompat.h \
 	highlighting.c highlighting.h \
 	highlightingmappings.h \
