Add HTML and XML template extensions
Add *.tpl and *.xtpl.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -34,7 +34,7 @@ Go=*.go;
 Graphviz=*.gv;*.dot;
 Haskell=*.hs;*.lhs;*.hs-boot;*.lhs-boot;
 Haxe=*.hx;
-HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
+HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;*.tpl;
 Java=*.java;*.jsp;
 Javascript=*.js;
 LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;*.aux;*.bib;
@@ -63,7 +63,7 @@ Txt2tags=*.t2t;
 Vala=*.vala;*.vapi;
 Verilog=*.v;
 VHDL=*.vhd;*.vhdl;
-XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;
+XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;*.xtpl;
 YAML=*.yaml;*.yml;
 None=*;
 
