JavaScript: don't choke when returning object literals

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -112,6 +112,7 @@ test_sources = \
 	char-selector.f90				\
 	classes.php						\
 	common.f						\
+	complex-return.js				\
 	continuation.f90				\
 	countall.sql					\
 	cpp_destructor.cpp				\
