--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -49,6 +49,7 @@ Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
+Protobuf=*.proto;
 Python=*.py;*.pyw;SConstruct;SConscript;wscript;
 PowerShell=*.ps1;*.psm1;
 reStructuredText=*.rest;*.reST;*.rst;
