Add a Txt2tags test case
From the official docs:
https://txt2tags.googlecode.com/svn/trunk/doc/English/rules.t2t

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -215,6 +215,7 @@ test_sources = \
 	recursive.f95					\
 	refcurs.sql						\
 	regexp.js						\
+	rules.t2t						\
 	secondary_fcn_name.js			\
 	semicolon.f90					\
 	shebang.js						\
