Add a Txt2tags test case
From the official docs:
https://txt2tags.googlecode.com/svn/trunk/samples/sample.t2t

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -216,6 +216,7 @@ test_sources = \
 	refcurs.sql						\
 	regexp.js						\
 	rules.t2t						\
+	sample.t2t						\
 	secondary_fcn_name.js			\
 	semicolon.f90					\
 	shebang.js						\
