Add a Txt2tags test case for titles
This is simply extracted from the rules.t2t test, but with unique title
content as the tagmanager removes duplicate tags in tags files.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -248,6 +248,7 @@ test_sources = \
 	test.vhd						\
 	test_input.rs					\
 	test_input2.rs					\
+	titles.t2t						\
 	traffic_signal.v				\
 	traits.php						\
 	union.f							\
