--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -63,6 +63,7 @@ geany_includedir = $(includedir)/geany
 # only install headers that define types or macros, not just functions
 geany_include_HEADERS = \
 	app.h \
+	dialogs.h \
 	build.h \
 	document.h \
 	editor.h \
