--- a/tagmanager/src/makefile.win32
+++ b/tagmanager/src/makefile.win32
@@ -44,8 +44,8 @@ all: $(COMPLIB)
 clean:
 	-$(RM) deps.mak *.o $(COMPLIB)
 
-$(COMPLIB): tm_workspace.o tm_work_object.o tm_source_file.o tm_project.o tm_tag.o \
-tm_symbol.o tm_file_entry.o tm_tagmanager.o
+$(COMPLIB): tm_workspace.o tm_work_object.o tm_source_file.o tm_tag.o \
+tm_file_entry.o
 	$(AR) rc $@ $^
 	$(RANLIB) $@
 
