--- a/tagmanager/src/Makefile.am
+++ b/tagmanager/src/Makefile.am
@@ -22,8 +22,15 @@ tagmanager_include_HEADERS = \
 
 
 libtagmanager_a_SOURCES =\
+	tm_tagmanager.h \
+	tm_parser.h \
+	tm_file_entry.h \
 	tm_file_entry.c \
+	tm_source_file.h \
 	tm_source_file.c \
+	tm_tag.h \
 	tm_tag.c \
 	tm_work_object.c \
+	tm_work_object.h \
+	tm_workspace.h \
 	tm_workspace.c
